--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "hot": "vite",
     "dev": "vite build --watch --mode development --outDir dist & vite",
     "build": "vite build",
     "preview": "vite preview"
